Fixed multiple findings in LootJS (#127)